--- a/NetworkProbabilityDownloader/WebContent/css/np_downloader.css
+++ b/NetworkProbabilityDownloader/WebContent/css/np_downloader.css
@@ -507,7 +507,9 @@ input.tabs_input + label {
 */
 
 input.tabs_input + label {
-    padding: 4px 50px;
+   /* padding: 4px 40px; */
+    padding: 4px 3%;
+    
 }
 
 input.tabs_input + label:hover {
