--- a/NetworkProbabilityDownloader/WebContent/css/np_downloader.css
+++ b/NetworkProbabilityDownloader/WebContent/css/np_downloader.css
@@ -485,7 +485,7 @@ input.tabs_input + label {
 }
 
 input.tabs_input + label:hover {
-    color:  #3d85c6;
+    color:  #3d85c6;  /* default color is #333 */
 }
 
 input.tabs_input:checked + label {
@@ -665,10 +665,10 @@ hr.footer {
     border-radius: 5px;
     border: 3px solid black;
     position: fixed;
-    width: 800px;
+    width: 920px;
     left: 50%;
     top: 50%;
-    margin-left: -400px;
+    margin-left: -480px;
     padding: 6px 8px 8px;
     box-sizing: border-box;
     text-align: center;
@@ -784,13 +784,20 @@ td.td_adminPasswordPromptLabel {
 table.admin {
      background-color:#E3E3E3;
      margin: auto;
-     border: 3px solid black;
+     border: 1px solid black;
 }
 
-th.admin {
-    border: 1px solid black;
+th.admin, th.fixedHead {
+  /*  border: 1px solid black; */
     background-color:#f3e1c0;
-    padding: 1px;
+    padding: 3px;
+}
+
+th.adminFooter {
+	/* background-color: #c19a6b; */
+	/* background-color: #f3e1c0; */
+	background-color: darkgrey;
+    padding: 3px;
 }
 
 td.admin {
@@ -894,6 +901,19 @@ h1.sitename {
   top: 0;
   left: 10%;
   z-index: 10;
+}
+
+a.downloadMessage {
+	text-decoration: none;
+	color: yellow;
+}
+
+a.downloadMessage: focus {
+	background-color: #0F52BA !important;
+}
+
+a.downloadMessage: visited {
+	background-color: #0F52BA !important;
 }
 
 
