--- a/NetworkProbabilityDownloader/WebContent/css/alert.css
+++ b/NetworkProbabilityDownloader/WebContent/css/alert.css
@@ -40,7 +40,8 @@
     display: none;
     z-index:99;
     /*background-color: #7a0019;*/
-    background-color: #644B26;
+    /* background-color: #644B26; */
+    background-color:  slategrey;  /* #0F52BA */
    /* background-color: #a49561;*/
    /* background-image: linear-gradient(#a49561ff, #474747ff); */   
     border-radius: 5px;
@@ -54,6 +55,10 @@
     padding: 6px 8px 8px;
     box-sizing: border-box;
     text-align: center;
+}
+
+.admin_gradient {
+	background-image: linear-gradient(slategrey, #36454F);
 }
 
 #updatesAlertBox
@@ -93,34 +98,58 @@
     position: fixed;
     width: 340px;
     left: 50%;
-    top: 26%;
+    top: 22%;
     margin-left: -150px;
     padding: 6px 8px 8px;
     box-sizing: border-box;
     text-align: center;
 }
 
-
 #div_updateURLDialogue {
 	display: none;
     z-index:10;
-    color: white;
+    color: #f5f5f5;
     /*background-color: #7a0019;*/
-    background-color: #644B26;
+    background-color: dimgrey;    /* #644B26 */
    /* background-color: #a49561;*/
    /* background-image: linear-gradient(#a49561ff, #474747ff); */   
     border-radius: 5px;
     border: 2px solid white;
     outline: 2px solid black;
     position: fixed;
-    width: 620px;
+    width: 1200px;
     left: 50%;
     top: 50%;
-    margin-left: -320px;
+    margin-left: -600px;
     padding: 6px 8px 8px;
     box-sizing: border-box;
     text-align: center;
 }
+
+#div_updateStudyHelp
+{
+    display: none;
+    text-align: left;
+    z-index:99;
+    /* background-color: #7a0019; */
+    background-color: #0F52BA;
+    color: white;
+   /* background-color: #a49561;*/
+   /* background-image: linear-gradient(#a49561ff, #474747ff); */   
+    background-image: linear-gradient(slategrey, #36454F);
+    border-radius: 5px;
+    border: 2px solid white;
+    outline: 2px solid black;
+    position: fixed;
+    width: 900px;
+    left: 50%;
+    top: 22%;
+    margin-left: -420px;
+    padding: 6px 8px 8px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
 
 hr.updates {
 	color: white;
